Fix images out of screen if too big

--- a/static/application.css
+++ b/static/application.css
@@ -74,6 +74,11 @@ textarea {
 	margin:0 auto;
 }
 
+#preview img {
+	max-width: 100%;
+	max-height: 100%;
+}
+
 /* code box when locked */
 
 #box {
